--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <div class="grid"></div>
+    </div>
     <script src="index.js"></script>
 </body>
 </html>
