--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <div id="score"></div>
     <div class="grid"></div>
     </div>
     <script src="index.js"></script>
